--- a/front-end/src/CSS/NavBar.css
+++ b/front-end/src/CSS/NavBar.css
@@ -1,14 +1,14 @@
 .navBar {
-  height: 100%;
   align-items: center;
+  background-color: #0a6b52;
   display: flex;
+  height: 100%;
   justify-content: space-around;
-  background-color: #0A6B52;
   padding: 10px;
 }
 
 .navBar a {
   all: unset;
-  font-size: 30px;
   color: white;
+  font-size: 30px;
 }
